--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,18 @@
-@import "../node_modules/normalize.css/normalize.css";
+@import "../node_modules/sanitize.css/sanitize.css";
+
+:root {
+  --black: hsl(0, 0%, 0%);
+  --gray-1: hsl(240, 5%, 10%);
+  --gray-2: hsl(240, 5%, 20%);
+  --gray-4: hsl(240, 5%, 40%);
+  --gray-6: hsl(240, 5%, 60%);
+  --gray-8: hsl(240, 5%, 80%);
+  --white: hsl(200, 0%, 100%);
+  --green: hsl(102, 36%, 48%);
+  --yellow: hsl(45, 87%, 57%);
+  --width: 600px;
+  --width-wide: 1200px;
+}
 
 html {
   height: 100%;
@@ -6,7 +20,13 @@ html {
 
 body {
   height: 100%;
-  font-family: "Outfit", sans-serif;
+  font-family: "Rubik", sans-serif;
+  font-size: 16px;
+  background: var(--gray-2);
+}
+
+p {
+  margin: 0;
 }
 
 #root {
