--- a/src/components/Welcome/Welcome.module.css
+++ b/src/components/Welcome/Welcome.module.css
@@ -1,12 +1,10 @@
-.welcomeWrapper {
-  display: flex;
-  justify-content: center;
-}
-
 .welcome {
   width: 100%;
   max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
+  flex: 1;
   flex-direction: column;
   padding: 30px 8px 4px 8px;
   gap: 30px;
@@ -42,7 +40,7 @@
   bottom: 0;
   left: 0;
   right: 50%;
-  background-color: var(--gray-4);
+  background-color: var(--gray-3);
   transition: transform 0.25s ease;
   border-radius: 8px;
 }
