--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,21 @@
 @import "../node_modules/sanitize.css/sanitize.css";
 
 :root {
-  --black: hsl(0, 0%, 0%);
-  --gray-1: hsl(240, 5%, 10%);
-  --gray-2: hsl(240, 5%, 20%);
-  --gray-4: hsl(240, 5%, 40%);
-  --gray-6: hsl(240, 5%, 60%);
-  --gray-8: hsl(240, 5%, 80%);
-  --white: hsl(200, 0%, 100%);
-  --green: hsl(102, 36%, 48%);
-  --yellow: hsl(45, 87%, 57%);
+  --black: hsl(240, 10%, 0%);
+  --gray-1: hsl(240, 10%, 10%);
+  --gray-2: hsl(240, 10%, 20%);
+  --gray-3: hsl(240, 10%, 30%);
+  --gray-4: hsl(240, 10%, 40%);
+  --gray-5: hsl(240, 10%, 50%);
+  --gray-6: hsl(240, 10%, 60%);
+  --gray-7: hsl(240, 10%, 60%);
+  --gray-8: hsl(240, 10%, 80%);
+  --gray-9: hsl(240, 10%, 80%);
+  --white: hsl(240, 10%, 100%);
+  --green: hsl(150, 50%, 50%);
+  --yellow: hsl(45, 70%, 58%);
+  --red: hsl(0, 88%, 58%);
+  --green-bg: hsl(150, 62%, 20%);
   --width: 600px;
   --width-wide: 1200px;
 }
@@ -22,7 +28,7 @@ body {
   height: 100%;
   font-family: "Rubik", sans-serif;
   font-size: 16px;
-  background: var(--gray-2);
+  background: var(--black);
 }
 
 p {
