UI pretty much done

--- a/src/components/Boards/Boards.module.css
+++ b/src/components/Boards/Boards.module.css
@@ -19,43 +19,60 @@
 }
 
 .board {
-  display: flex;
-  flex-direction: column;
-  gap: 1px;
-}
-.board.highlighted {
-  background-color: var(--white);
-  border: 2px solid var(--white);
-}
-@media screen and (min-width: 600px) {
-  .board.highlighted {
-    border: 4px solid var(--white);
-  }
-}
-
-.row {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 1px;
+  /* Safari force gpu render */
+  transform: translateZ(0);
+  transition: background-color 0.1s ease, box-shadow 0.1s ease;
 }
-.row.sticky {
-  position: sticky;
-  bottom: -4px;
+.board.highlighted {
+  background-color: var(--white);
+  box-shadow: 0px 0px 0px 2px var(--white);
 }
 @media screen and (min-width: 600px) {
-  .row.sticky {
-    bottom: -8px;
+  .board.highlighted {
+    box-shadow: 0px 0px 0px 4px var(--white);
+  }
+}
+.board.dimmed {
+  filter: contrast(0.5) brightness(0.25);
+}
+.board.hidden:not(.animate) {
+  display: none;
+}
+.board.hidden.animate {
+  animation-name: hide;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
+}
+@keyframes hide {
+  0% {
+    opacity: 1;
+    position: initial;
+    visibility: visible;
+  }
+  99.99% {
+    opacity: 0;
+    position: initial;
+    visibility: hidden;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+    position: fixed;
   }
 }
 
 .cell {
-  height: calc(min(100vw, var(--width)) * 0.045);
+  height: 17px;
   display: flex;
   align-items: center;
   justify-content: center;
   background: var(--gray-2);
-  position: relative;
   color: var(--white);
+  bottom: -4px;
 }
 .cell.black {
   background: var(--gray-4);
@@ -68,10 +85,67 @@
   background: var(--green);
   color: var(--black);
 }
+.cell.sticky {
+  position: sticky;
+}
+.cell.textRed {
+  color: var(--red);
+}
+.cell.textYellow {
+  color: var(--yellow);
+}
+.cell.textGhost {
+  color: var(--gray-6);
+}
 
 .letter {
   user-select: none;
-  position: absolute;
-  font-size: calc(min(100vw, var(--width)) * 0.035);
+  font-size: 17px;
   line-height: 0.75;
+}
+
+@media screen and (min-width: 400px) {
+  .cell {
+    height: 20px;
+  }
+  .letter {
+    font-size: 20px;
+  }
+}
+
+@media screen and (min-width: 450px) {
+  .cell {
+    height: 22px;
+  }
+  .letter {
+    font-size: 22px;
+  }
+}
+
+@media screen and (min-width: 500px) {
+  .cell {
+    height: 25px;
+  }
+  .letter {
+    font-size: 25px;
+  }
+}
+
+@media screen and (min-width: 550px) {
+  .cell {
+    height: 26px;
+  }
+  .letter {
+    font-size: 26px;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .cell {
+    height: 27px;
+    bottom: -8px;
+  }
+  .letter {
+    font-size: 27px;
+  }
 }
