--- a/src/components/Keyboard/Keyboard.module.css
+++ b/src/components/Keyboard/Keyboard.module.css
@@ -2,7 +2,43 @@
   width: 100%;
   max-width: var(--width);
   margin: auto;
-  background-color: var(--black);
-  border: 1px solid var(--white);
-  height: 100px;
+  padding: 4px;
+
+  display: flex;
+  flex-direction: column;
+}
+.row1 {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+}
+.row2 {
+  display: grid;
+  grid-template-columns: 1fr repeat(9, 2fr) 1fr;
+}
+.row3 {
+  display: grid;
+  grid-template-columns: 3fr repeat(7, 2fr) 3fr;
+}
+
+.spacer {
+  visibility: hidden;
+}
+.key {
+  margin: 2px;
+  flex: 1;
+  height: 40px;
+  background-color: var(--gray-4);
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 30px;
+}
+@media screen and (min-width: 600px) {
+  .key {
+    height: 50px;
+  }
+}
+.key:active {
+  transform: translateY(2px);
+  filter: brightness(125%);
 }
