--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,8 @@
   --green: hsl(148, 59%, 55%);
   --yellow: hsl(45, 80%, 58%);
   --red: hsl(0, 88%, 58%);
-  --green-bg: hsl(150, 62%, 20%);
+  --red-bg: hsl(0, 100%, 40%);
+  --green-bg: hsl(150, 88%, 30%);
   --width: 600px;
   --width-wide: 1200px;
 }
@@ -31,8 +32,14 @@ body {
   background: var(--black);
 }
 
-p {
+p,
+ul,
+hr {
   margin: 0;
+}
+
+a {
+  color: var(--white);
 }
 
 #root {
