--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -3,7 +3,10 @@
 }
 
 .main {
+  height: 100%;
+
   display: flex;
   flex-direction: column;
-  height: 100%;
+  align-items: center;
+  justify-content: stretch;
 }
