--- a/src/components/Keyboard/Keyboard.module.css
+++ b/src/components/Keyboard/Keyboard.module.css
@@ -26,16 +26,19 @@
 .key {
   margin: 2px;
   flex: 1;
-  height: 40px;
+  height: 50px;
   background-color: var(--gray-4);
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 30px;
+  font-size: 25px;
   user-select: none;
+  transition: filter 0.1s ease, background-color 0.1s ease;
+  padding: 0;
 }
 @media screen and (min-width: 600px) {
   .key {
+    font-size: 30px;
     height: 50px;
   }
 }
