--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ body {
   font-family: "Rubik", sans-serif;
   font-size: 16px;
   background: var(--black);
+  overscroll-behavior-y: contain;
 }
 
 p,
