--- a/src/components/Boards/Boards.module.css
+++ b/src/components/Boards/Boards.module.css
@@ -17,6 +17,10 @@
     padding: 8px 8px 8px 8px;
   }
 }
+.boards.wide {
+  grid-template-columns: repeat(8, 1fr);
+  max-width: var(--width-wide);
+}
 
 .board {
   display: grid;
