--- a/src/components/Results/Results.module.css
+++ b/src/components/Results/Results.module.css
@@ -14,6 +14,9 @@
 .results.green {
   background-color: var(--green-bg);
 }
+.results.wide {
+  max-width: var(--width-wide);
+}
 
 .title {
   text-align: center;
