--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,8 +5,7 @@
   flex-direction: column;
   align-items: center;
   background-color: var(--gray-1);
-  padding-top: 4px;
-  padding-bottom: 4px;
+  padding: 4px 4px;
   border-bottom: 1px solid var(--gray-3);
 }
 
