--- a/src/components/Settings/Settings.module.css
+++ b/src/components/Settings/Settings.module.css
@@ -48,3 +48,15 @@
 .email {
   flex: 1;
 }
+.submit {
+  color: var(--white);
+  background-color: var(--gray-4);
+  font-size: 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 4px 8px;
+}
+.submit:active {
+  transform: translateY(1px);
+}
