--- a/src/components/Welcome/Welcome.module.css
+++ b/src/components/Welcome/Welcome.module.css
@@ -30,6 +30,7 @@
   right: 0;
   width: 100%;
   z-index: 2;
+  color: var(--white);
   background-color: transparent;
   border: none;
   font-size: 20px;
