--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -124,6 +124,7 @@
   padding: 4px 0px;
   cursor: pointer;
   flex: 1;
+  color: var(--white);
 }
 .chip.green {
   background-color: var(--green);
