--- a/src/components/Keyboard/Keyboard.module.css
+++ b/src/components/Keyboard/Keyboard.module.css
@@ -34,6 +34,7 @@
   user-select: none;
   transition: filter 0.1s ease, background-color 0.1s ease;
   padding: 0;
+  color: var(--white);
 }
 @media screen and (min-width: 600px) {
   .key {
