DU-65 - add deduced letters to hints

--- a/src/components/Boards/Boards.module.css
+++ b/src/components/Boards/Boards.module.css
@@ -113,6 +113,9 @@
 .cell.textGhost {
   color: var(--gray-6);
 }
+.cell.textPink {
+  color: var(--pink);
+}
 .boards.colorBlind .cell.black {
   background: var(--gray-3);
 }
