--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   --white: hsl(240, 10%, 100%);
   --green: hsl(148, 59%, 55%);
   --yellow: hsl(45, 80%, 58%);
+  --pink: hsl(300, 60%, 70%);
   --orange: hsl(45, 100%, 75%);
   --blue: hsl(224, 100%, 70%);
   --red: hsl(0, 88%, 58%);
