--- a/src/components/common/Modal/Modal.module.css
+++ b/src/components/common/Modal/Modal.module.css
@@ -21,7 +21,7 @@
   border: 1px solid var(--white);
   border-radius: 4px;
 
-  overflow-y: scroll;
+  overflow-y: auto;
 
   display: flex;
   flex-direction: column;
