--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   background-color: var(--gray-1);
-  padding: 4px 4px;
+  padding: 0px 4px 4px 4px;
   border-bottom: 1px solid var(--gray-3);
 }
 
@@ -15,6 +15,7 @@
   display: flex;
   align-items: center;
   gap: 4px;
+  padding-top: 4px;
 }
 .header.wide .row1 {
   max-width: var(--width-wide);
