--- a/src/components/common/TabButtons/TabButtons.module.css
+++ b/src/components/common/TabButtons/TabButtons.module.css
@@ -1,7 +1,7 @@
 .tabs {
   display: grid;
   position: relative;
-  height: 40px;
+  min-height: 40px;
   animation: fadeIn 0.5s ease;
 }
 .tabWrapper {
