--- a/src/components/common/TabButtons/TabButtons.module.css
+++ b/src/components/common/TabButtons/TabButtons.module.css
@@ -22,7 +22,12 @@
   cursor: pointer;
 }
 .tabs.small .tab {
-  font-size: 16px;
+  font-size: 12px;
+}
+@media screen and (min-width: 450px) {
+  .tabs.small .tab {
+    font-size: 16px;
+  }
 }
 .highlight {
   position: absolute;
