Tweak modal height

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -16,9 +16,7 @@
   flex-direction: column;
   gap: 4px;
   overflow-y: auto;
-}
-.overflow.changelog {
-  max-height: 415px;
+  height: 415px;
 }
 
 .new {
