--- a/src/components/common/TabButtons/TabButtons.module.css
+++ b/src/components/common/TabButtons/TabButtons.module.css
@@ -22,10 +22,13 @@
   cursor: pointer;
 }
 .tabs.small .tab {
+  font-size: 16px;
+}
+.tabs.tiny .tab {
   font-size: 12px;
 }
-@media screen and (min-width: 415px) {
-  .tabs.small .tab {
+@media screen and (min-width: 400px) {
+  .tabs.tiny .tab {
     font-size: 16px;
   }
 }
