--- a/src/components/Boards/Boards.module.css
+++ b/src/components/Boards/Boards.module.css
@@ -1,8 +1,10 @@
 .boards {
   flex: 1;
+
   width: 100%;
   max-width: var(--width);
   margin: auto;
+
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   row-gap: 24px;
@@ -10,6 +12,8 @@
   overflow-y: scroll;
   padding: 4px 4px 4px 4px;
   align-content: start;
+
+  animation: fadeIn 0.5s ease;
 }
 @media screen and (min-width: 600px) {
   .boards {
@@ -21,6 +25,14 @@
 .boards.wide {
   grid-template-columns: repeat(8, 1fr);
   max-width: var(--width-wide);
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .board {
@@ -53,13 +65,6 @@
 }
 .board.dimmed {
   filter: contrast(0.5) brightness(0.25);
-}
-.boards.disableAnimations .board {
-  transition: none;
-}
-.boards.disableAnimations .board.hidden {
-  display: none;
-  animation: none;
 }
 .board.hidden {
   animation: hide 0.5s ease-out 0s 1 forwards;
