--- a/src/components/Welcome/Welcome.module.css
+++ b/src/components/Welcome/Welcome.module.css
@@ -18,14 +18,17 @@
   gap: 30px;
 }
 /*
-  Whenever the .practice class state changes,
+  Whenever the welcome class state changes,
   play fade in animation
 */
-.welcome:not(.practice) .tabContainer {
-  animation: fadeIn 0.5s ease;
+.welcome.daily .tabContainer {
+  animation: fadeIn 0.1s ease;
 }
-.welcome .tabContainer {
-  animation: fadeIn2 0.5s ease;
+.welcome.practice .tabContainer {
+  animation: fadeIn2 0.1s ease;
+}
+.welcome.more .tabContainer {
+  animation: fadeIn3 0.1s ease;
 }
 @keyframes fadeIn {
   0% {
@@ -43,8 +46,16 @@
     opacity: 1;
   }
 }
+@keyframes fadeIn3 {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
-.gameMode {
+.item {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
