--- a/src/components/common/TabButtons/TabButtons.module.css
+++ b/src/components/common/TabButtons/TabButtons.module.css
@@ -2,7 +2,6 @@
   display: grid;
   position: relative;
   min-height: 40px;
-  animation: fadeIn 0.5s ease;
 }
 .tabWrapper {
   position: relative;
@@ -18,18 +17,12 @@
   color: var(--white);
   background-color: transparent;
   border: none;
-  font-size: 24px;
+  font-size: 20px;
   cursor: pointer;
 }
-.tabs.small .tab {
-  font-size: 16px;
-}
-.tabs.tiny .tab {
-  font-size: 12px;
-}
-@media screen and (min-width: 400px) {
-  .tabs.tiny .tab {
-    font-size: 16px;
+@media screen and (min-width: 600px) {
+  .tab {
+    font-size: 24px;
   }
 }
 .highlight {
