--- a/src/components/common/TabButtons/TabButtons.module.css
+++ b/src/components/common/TabButtons/TabButtons.module.css
@@ -20,9 +20,20 @@
   font-size: 20px;
   cursor: pointer;
 }
+.small .tab {
+  font-size: 14px;
+}
+@media screen and (min-width: 400px) {
+  .small .tab {
+    font-size: 16px;
+  }
+}
 @media screen and (min-width: 600px) {
   .tab {
     font-size: 24px;
+  }
+  .small .tab {
+    font-size: 18px;
   }
 }
 .highlight {
