--- a/src/components/Stats/Stats.module.css
+++ b/src/components/Stats/Stats.module.css
@@ -1,3 +1,10 @@
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
 .main {
   max-width: 600px;
   width: 100%;
@@ -15,6 +22,21 @@
   100% {
     opacity: 1;
   }
+}
+
+.loading {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 15;
+  background-color: rgba(0, 0, 0, 0.9);
+
+  display: flex;
+  padding: 24px 24px 24px 24px;
+  justify-content: center;
+  font-size: 24px;
 }
 
 .tabs {
