--- a/src/components/Snackbar/Snackbar.module.css
+++ b/src/components/Snackbar/Snackbar.module.css
@@ -12,6 +12,7 @@
 .snackbar.hidden {
   opacity: 0;
   transform: scale(0.9);
+  pointer-events: none;
 }
 .snackbar.error {
   background-color: var(--red-bg);
